Обновлены ошибки в хэндлерах, обновлена документация
